# nplinker

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mlc-config.json  .prospector.yml  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.webapp  Dockerfile.webapp.local  LICENSE  MANIFEST.in  Makefile  NOTICE  Pipfile  README.dev.md  README.md  build_app_local.sh  mkdocs.yml  project_setup.md  pyproject.toml  requirements.dev.txt  requirements.txt  run_nplinker_docker.sh  setup.py  sonar-project.properties  versions.json
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  format-typing-check.yml  lint.yml  markdown-link-check.yml  publish_gh_release.yml  publish_to_pypi.yml  scorecard.yml  sonar-cloud.yml  typing-check.yml
2.0.0a2/: objects.inv
2.0.0a2/install/: index.html
2.0.0a2/logging/: index.html
2.0.0a3/: 404.html  index.html
2.0.0a3/install/: index.html
2.0.0a4/: objects.inv
2.0.0a4/install/: index.html
2.0.0a6/: index.html  objects.inv
2.0.0a6/css/: extra.css
2.0.0a6/logging/: index.html
2.0.0a6/quickstart/: index.html
2.0.0a6/search/: search_index.json
conda/: environment-dev.yaml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/install/: index.html
dev/logging/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
doc/: index.rst
docs/: Makefile  conf.py  index.md  index.rst  install.md  logging.md  make.bat  quickstart.md
docs/api/: antismash.md  arranger.md  bigscape.md  genomics.md  genomics_abc.md  genomics_utils.md  gnps.md  loader.md  metabolomics.md  metabolomics_abc.md  metabolomics_utils.md  mibig.md  nplinker.md  schema.md  scoring.md  scoring_abc.md  scoring_methods.md  scoring_utils.md  strain.md  strain_utils.md  utils.md
docs/concepts/: bigscape.md  config_file.md  gnps_data.md  working_dir_structure.md
docs/diagrams/: arranger.md  loader.md
notebooks/: 1-class_linking_prospecting.ipynb  2-class_linking_tests.ipynb  aa_residues.csv  class_linking.py  class_linking_test.py  crusemann_nplinker_iokr.ipynb  iokr_scoring.ipynb  latest_api_demo.toml  mibig_gnps_links_q3_loose.csv  nplinker_correlation_probabilities.ipynb  nplinker_demo1-Copy1.ipynb  nplinker_demo1.ipynb  nplinker_demo1.py  nplinker_demo1.toml  nplinker_demo1_crus.ipynb  simon_notebook.ipynb
notebooks/carnegie-notebooks/: high_scoring_links_for_interesting_bgcs_nplinker.ipynb  metcalf_expected_and_variance.ipynb  metcalf_std.ipynb  simon_plots.ipynb
notebooks/npclassscore_linking/: 1-class_linking_prospecting.ipynb  2-class_linking_analysis.ipynb  3-crusemann_analysis_class_linking.ipynb  NPClassScore_demo.ipynb  analysis-Crusemann.ipynb  analysis-Cyanobacteria.ipynb  analysis-MSV000084771.ipynb  analysis-MSV000084950.ipynb  analysis-Nocardia.ipynb  analysis-Streptomyces_Salinispora.ipynb  analysis-combined.ipynb  class_linking_test.py  crusemann_get_strain_mappings.ipynb  crusemann_strain_mappings.csv
notebooks/rosetta_data_prep/: README.txt  mibig_gnps_merge.py
notebooks/scoring_notebooks/: compunds_structures_2.0.csv  nplinker_correlation_expected_variance_ok.ipynb  nplinker_crusemann_analysis_ok.ipynb  nplinker_leao_analysis_ok.ipynb
prototype/: aa_pred.py  aa_residues.csv  accession_dict.csv  config.py  crusemann_loading.ipynb  crusemann_nplinker_iokr.ipynb  data_linking.py  data_linking_functions.py  flexible_scoring.ipynb  genomics.py  genomics_utilities.py  iokr_scoring.ipynb  latest_api_demo.ipynb  latest_api_demo.toml  latest_api_demo_cru.toml  layout.py  loader.py  logconfig.py  metabolomics.py  metcalf_scoring.ipynb  nplinker.py  nplinker.toml  nplinker_constants.py  nplinker_correlation_probabilities.ipynb  nplinker_example_script.py.ipynb  nplinker_new_scoring.ipynb  nplinker_significancy_tests.ipynb  parsers.py  prepend_antismash_strain.sh  process_output.py  scoring.py  scoring_functions.py  setup_paths.py  simon_notebook.ipynb  spec_clustering_simon.ipynb  strain_id_mapping.csv  strain_ids.csv  strainmanager.py  test_scoring.py
prototype/carnegie-notebooks/: high_scoring_links_for_interesting_bgcs_nplinker.ipynb  metcalf_by_media_graph.ipynb  metcalf_std.ipynb  simon_plots.ipynb
prototype/nplinker/: __init__.py  aa_pred.py  aalist.py  annotations.py  config.py  data_linking.py  genomics.py  genomics_utilities.py  layout.py  loader.py  logconfig.py  metabolomics.py  nplinker.py  nplinker_constants.py  pickler.py  process_output.py  spec_clustering.py  strains.py  utils.py
prototype/parsers/: mgf.py
prototype/scoring/: IOKR.py
prototype/scoring_notebooks/: nplinker_mibig_gnps_iokr_ok.ipynb  paper_Crusemann paired data KKB IOKR.ipynb  paper_IOKR MIBiG top predictions.ipynb  paper_Leao paired data KKB IOKR.ipynb  paper_metcalf_expected_and_variance.ipynb
prototype/tests/: __init__.py  test_data_linking_functions.py
src/nplinker/: __init__.py  aa_pred.py  aalist.py  annotations.py  arranger.py  config.py  defaults.py  genomics.py  genomics_utilities.py  globals.py  loader.py  logconfig.py  logger.py  logging.py  metabolomics.py  (+11 more)
tests/: __init__.py  conftest.py  test_GNPSFileMappingLoader.py  test_GNPSMolecularFamilyLoader.py  test_aa_pred.py  test_annotations.py  test_antismash_loader.py  test_bgc.py  test_chem_classes.py  test_config.py  test_data_linking_functions.py  test_data_links.py  test_downloader.py  test_gnps_annotation_loader.py  test_gnps_downloader.py  test_gnps_extractor.py  test_gnps_file_mapping_loader.py  test_gnps_format.py  test_gnps_loader.py  test_gnps_molecular_family_loader.py  test_gnps_spectrum_loader.py  test_load_gnps.py  test_loader.py  test_metabolomics.py  test_mgf.py  test_mibig.py  test_mibig_bgc.py  test_mibig_downloader.py  test_mibig_loader.py  test_mibig_metadata.py  test_nplinker.py  test_nplinker_local.py  test_scoring.py  test_strain.py  test_strain_collection.py  test_strain_loader.py  test_utils.py
vscode/: nplinker.code-profile
(+1308 files in other folders)
