# We use setup.cfg to set project metadata and setuptools configs.
# All the other configs (e.g. pytest, coverage) are set in this file.
# see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nplinker"
version = "1.3.2"
description = "Natural Products Linker"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Genome", "Metabolome", "Natural Products", "Data Mining"]
license = {text = "Apache-2.0 license"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "beautifulsoup4",
    "biopython",
    "httpx",
    "numpy",
    "pandas",
    "progress",
    "scipy",
    "sortedcontainers",
    "toml",
    "tqdm",
    "xdg"
]

[project.urls]
"Homepage" = "https://github.com/NPLinker/nplinker"
"Bug Tracker" = "https://github.com/NPLinker/nplinker/issues"

[project.optional-dependencies]
dev = [
    "bump2version",
    "coverage[toml]",
    "isort",
    "prospector[with_pyroma]",
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "myst_parser",
    "unimport",
    "yapf"
]
publishing = [
    "build",
    "wheel"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true  # enable data directory to be identified

[tool.setuptools.package-data]
"nplinker.data" = [ "*" ]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
command_line = "-m pytest"

[tool.isort]
lines_after_imports = 2
force_single_line = true
no_lines_before = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["nplinker"]
src_paths = ["src", "tests"]
line_length = 80

# Mypy: to check static type
# see https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
